--- a/src/main/resources/application/primary.fxml
+++ b/src/main/resources/application/primary.fxml
@@ -1,16 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PrimaryController">
-   <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
-   </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</VBox>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="746.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+  <tabs>
+    <Tab text="Productos">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TableView layoutX="24.0" layoutY="57.0" prefHeight="382.0" prefWidth="543.0">
+                    <columns>
+                      <TableColumn prefWidth="120.0" text="Codigo Producto" />
+                      <TableColumn prefWidth="100.0" text="Producto" />
+                        <TableColumn prefWidth="100.0" text="Descripcion" />
+                        <TableColumn prefWidth="100.0" text="Stock" />
+                        <TableColumn prefWidth="121.0" text="Precio compra" />
+                    </columns>
+                  </TableView>
+                  <Text layoutX="584.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OPERACIONES" />
+                  <Button layoutX="602.0" layoutY="189.0" mnemonicParsing="false" text="Añadir" />
+                  <Button layoutX="591.0" layoutY="134.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="596.0" layoutY="243.0" mnemonicParsing="false" text="Eliminar" />
+               </children></AnchorPane>
+      </content>
+    </Tab>
+    <Tab text="Clientes">
+      <content>
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TableView layoutX="45.0" layoutY="53.0" prefHeight="397.0" prefWidth="476.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="Nombre" />
+                      <TableColumn prefWidth="105.0" text="Email" />
+                        <TableColumn prefWidth="81.0" text="Telefono" />
+                        <TableColumn prefWidth="92.0" text="Limite de Credito" />
+                        <TableColumn prefWidth="121.0" text="Fecha de nacimiento" />
+                    </columns>
+                  </TableView>
+                  <Text layoutX="562.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OPERACIONES" />
+                  <Button layoutX="568.0" layoutY="130.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="568.0" layoutY="181.0" mnemonicParsing="false" text="Añadir" />
+                  <Button layoutX="568.0" layoutY="236.0" mnemonicParsing="false" text="Eliminar" />
+               </children></AnchorPane>
+      </content>
+    </Tab>
+      <Tab text="Consultas">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TableView layoutX="27.0" layoutY="36.0" prefHeight="405.0" prefWidth="487.0">
+                    <columns>
+                      <TableColumn prefWidth="136.0" text="Numero de ordren" />
+                      <TableColumn prefWidth="86.0" text="Data Ordren" />
+                        <TableColumn prefWidth="86.0" text="Data Requerida" />
+                        <TableColumn prefWidth="86.0" text="Shipped Data" />
+                        <TableColumn prefWidth="86.0" text="Mail Usuario" />
+                    </columns>
+                  </TableView>
+                  <Text layoutX="575.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OPERACIONES" />
+                  <Button layoutX="591.0" layoutY="133.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="591.0" layoutY="238.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button layoutX="591.0" layoutY="186.0" mnemonicParsing="false" text="Añadir" />
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+  </tabs>
+</TabPane>
