--- a/src/main/resources/application/primary.fxml
+++ b/src/main/resources/application/primary.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
@@ -10,65 +11,178 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="746.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0" prefWidth="1061.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <tabs>
-    <Tab text="Productos">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <TableView layoutX="24.0" layoutY="57.0" prefHeight="382.0" prefWidth="543.0">
-                    <columns>
-                      <TableColumn prefWidth="120.0" text="Codigo Producto" />
-                      <TableColumn prefWidth="100.0" text="Producto" />
-                        <TableColumn prefWidth="100.0" text="Descripcion" />
-                        <TableColumn prefWidth="100.0" text="Stock" />
-                        <TableColumn prefWidth="121.0" text="Precio compra" />
-                    </columns>
-                  </TableView>
-                  <Text layoutX="584.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OPERACIONES" />
-                  <Button layoutX="602.0" layoutY="189.0" mnemonicParsing="false" text="Añadir" />
-                  <Button layoutX="591.0" layoutY="134.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button layoutX="596.0" layoutY="243.0" mnemonicParsing="false" text="Eliminar" />
-               </children></AnchorPane>
-      </content>
-    </Tab>
     <Tab text="Clientes">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView layoutX="45.0" layoutY="53.0" prefHeight="397.0" prefWidth="476.0">
+                  <TableView layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="Nombre" />
-                      <TableColumn prefWidth="105.0" text="Email" />
-                        <TableColumn prefWidth="81.0" text="Telefono" />
-                        <TableColumn prefWidth="92.0" text="Limite de Credito" />
-                        <TableColumn prefWidth="121.0" text="Fecha de nacimiento" />
+                      <TableColumn prefWidth="111.0" text="Nombre" />
+                        <TableColumn prefWidth="154.0" text="DNI" />
+                        <TableColumn minWidth="7.0" prefWidth="199.0" text="Limite de Credito" />
+                        <TableColumn minWidth="0.0" prefWidth="134.0" text="Telefono" />
+                      <TableColumn prefWidth="173.0" text="Email" />
+                        <TableColumn prefWidth="214.0" text="Fecha de nacimiento" />
                     </columns>
                   </TableView>
-                  <Text layoutX="562.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OPERACIONES" />
-                  <Button layoutX="568.0" layoutY="130.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button layoutX="568.0" layoutY="181.0" mnemonicParsing="false" text="Añadir" />
-                  <Button layoutX="568.0" layoutY="236.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button layoutX="446.0" layoutY="602.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="365.0" layoutY="602.0" mnemonicParsing="false" text="Añadir" />
+                  <Button layoutX="549.0" layoutY="602.0" mnemonicParsing="false" text="Eliminar" />
+                  <TextArea layoutX="31.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Nombre">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="189.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="DNI">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Limite de Credito">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="518.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Telefono">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Email">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="850.0" layoutY="532.0" prefHeight="40.0" prefWidth="158.0" promptText="Fecha de nacimiento">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
                </children></AnchorPane>
       </content>
     </Tab>
-      <Tab text="Consultas">
+      <Tab text="Productos">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView layoutX="27.0" layoutY="36.0" prefHeight="405.0" prefWidth="487.0">
-                    <columns>
-                      <TableColumn prefWidth="136.0" text="Numero de ordren" />
-                      <TableColumn prefWidth="86.0" text="Data Ordren" />
-                        <TableColumn prefWidth="86.0" text="Data Requerida" />
-                        <TableColumn prefWidth="86.0" text="Shipped Data" />
-                        <TableColumn prefWidth="86.0" text="Mail Usuario" />
-                    </columns>
+                  <TableView layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
+                     <columns>
+                        <TableColumn prefWidth="171.0" text="Codigo Producto" />
+                        <TableColumn prefWidth="187.0" text="Producto" />
+                        <TableColumn minWidth="7.0" prefWidth="181.0" text="Descripcion" />
+                        <TableColumn minWidth="0.0" prefWidth="183.0" text="Stock" />
+                        <TableColumn prefWidth="263.0" text="Precio compra" />
+                     </columns>
                   </TableView>
-                  <Text layoutX="575.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OPERACIONES" />
-                  <Button layoutX="591.0" layoutY="133.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button layoutX="591.0" layoutY="238.0" mnemonicParsing="false" text="Eliminar" />
-                  <Button layoutX="591.0" layoutY="186.0" mnemonicParsing="false" text="Añadir" />
+                  <Button layoutX="278.0" layoutY="602.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="407.0" layoutY="602.0" mnemonicParsing="false" text="Añadir" />
+                  <Button layoutX="510.0" layoutY="602.0" mnemonicParsing="false" text="Eliminar" />
+                  <TextArea layoutX="31.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Codigo Producto">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="189.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Producto">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripcion">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="518.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Stock">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Precio compra">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+      <Tab text="Ordenes">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
+               <children>
+                  <TableView layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
+                     <columns>
+                        <TableColumn prefWidth="169.0" text="Numero de ordren" />
+                        <TableColumn prefWidth="207.0" text="Fecha Ordren" />
+                        <TableColumn minWidth="7.0" prefWidth="209.0" text="Fecha llegada" />
+                        <TableColumn minWidth="0.0" prefWidth="191.0" text="Fecha de envio" />
+                        <TableColumn prefWidth="209.0" text="Mail Usuario" />
+                     </columns>
+                  </TableView>
+                  <Button layoutX="419.0" layoutY="602.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="531.0" layoutY="602.0" mnemonicParsing="false" text="Eliminar" />
+                  <TextArea layoutX="31.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Numero de ordren">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="189.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Fecha ordren">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Fecha llegada">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="518.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Fecha de envio">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+                  <TextArea layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Mail Usuario">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextArea>
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+      <Tab text="Detalle de pedido">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
+               <children>
+                  <TableView layoutX="28.0" layoutY="314.0" prefHeight="237.0" prefWidth="656.0">
+                     <columns>
+                        <TableColumn prefWidth="93.0" text="Nº ordren" />
+                        <TableColumn prefWidth="108.0" text="Nº Producto" />
+                        <TableColumn minWidth="0.0" prefWidth="153.0" text="Precio por unidad" />
+                        <TableColumn minWidth="0.0" prefWidth="125.0" text="Cantidad" />
+                        <TableColumn maxWidth="250.0" prefWidth="184.0" text="Order Line Number" />
+                     </columns>
+                  </TableView>
+                  <Button layoutX="291.0" layoutY="567.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="207.0" layoutY="567.0" mnemonicParsing="false" text="Añadir" />
+                  <Button layoutX="398.0" layoutY="567.0" mnemonicParsing="false" text="Eliminar" />
+                  <ComboBox layoutX="777.0" layoutY="337.0" prefWidth="150.0" promptText="CLIENTE" />
+                  <Separator layoutX="37.0" layoutY="247.0" prefHeight="42.0" prefWidth="988.0" />
+                  <ComboBox layoutX="777.0" layoutY="399.0" prefWidth="150.0" promptText="ARTICULO" />
+                  <DatePicker layoutX="777.0" layoutY="465.0" prefHeight="28.0" prefWidth="158.0" promptText="Fecha de pedido" />
+                  <GridPane layoutX="627.0" layoutY="33.0" prefHeight="209.0" prefWidth="218.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
                </children>
             </AnchorPane>
          </content>
