--- a/src/main/resources/application/primary.fxml
+++ b/src/main/resources/application/primary.fxml
@@ -108,46 +108,29 @@
             </AnchorPane>
          </content>
       </Tab>
-      <Tab text="Ordenes">
+      <Tab text="Pedido">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
+                  <TableView layoutX="26.0" layoutY="109.0" prefHeight="393.0" prefWidth="985.0">
                      <columns>
-                        <TableColumn prefWidth="169.0" text="Numero de ordren" />
-                        <TableColumn prefWidth="207.0" text="Fecha Ordren" />
-                        <TableColumn minWidth="7.0" prefWidth="209.0" text="Fecha llegada" />
-                        <TableColumn minWidth="0.0" prefWidth="191.0" text="Fecha de envio" />
-                        <TableColumn prefWidth="209.0" text="Mail Usuario" />
+                        <TableColumn prefWidth="131.0" text="Nº pedido" />
+                        <TableColumn prefWidth="163.0" text="Fecha pedido" />
+                        <TableColumn minWidth="7.0" prefWidth="198.0" text="Fecha llegada" />
+                        <TableColumn minWidth="0.0" prefWidth="176.0" text="Fecha de envio" />
+                        <TableColumn prefWidth="169.0" text="Mail Usuario" />
+                        <TableColumn prefWidth="148.0" text="Precio total pedido" />
                      </columns>
                   </TableView>
-                  <Button layoutX="419.0" layoutY="602.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button layoutX="531.0" layoutY="602.0" mnemonicParsing="false" text="Eliminar" />
-                  <TextArea layoutX="31.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Numero de ordren">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="189.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Fecha ordren">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Fecha llegada">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="518.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Fecha de envio">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Mail Usuario">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
+                  <Button layoutX="422.0" layoutY="602.0" mnemonicParsing="false" text="Actualizar" />
+                  <Button layoutX="556.0" layoutY="602.0" mnemonicParsing="false" text="Eliminar" />
+                  <Separator layoutX="21.0" layoutY="87.0" prefHeight="4.0" prefWidth="995.0" />
+                  <DatePicker layoutX="31.0" layoutY="43.0" prefHeight="24.0" prefWidth="195.0" promptText="De" />
+                  <DatePicker layoutX="242.0" layoutY="43.0" prefHeight="24.0" prefWidth="195.0" promptText="Hasta" />
+                  <Text layoutX="31.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filtrar entre dos fechas" />
+                  <TextField layoutX="31.0" layoutY="537.0" promptText="Fecha de pedido" />
+                  <TextField layoutX="250.0" layoutY="537.0" promptText="Fecha de llegada" />
+                  <TextField layoutX="474.0" layoutY="537.0" promptText="Fecha de envío" />
                </children>
             </AnchorPane>
          </content>
@@ -156,33 +139,32 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView layoutX="28.0" layoutY="314.0" prefHeight="237.0" prefWidth="656.0">
+                  <TableView layoutX="35.0" layoutY="285.0" prefHeight="287.0" prefWidth="992.0">
                      <columns>
-                        <TableColumn prefWidth="93.0" text="Nº ordren" />
-                        <TableColumn prefWidth="108.0" text="Nº Producto" />
+                        <TableColumn prefWidth="93.0" text="Nº pedido" />
+                        <TableColumn prefWidth="108.0" text="Nº producto" />
                         <TableColumn minWidth="0.0" prefWidth="153.0" text="Precio por unidad" />
                         <TableColumn minWidth="0.0" prefWidth="125.0" text="Cantidad" />
                         <TableColumn maxWidth="250.0" prefWidth="184.0" text="Order Line Number" />
+                        <TableColumn minWidth="0.0" prefWidth="153.0" text="Precio total" />
                      </columns>
                   </TableView>
-                  <Button layoutX="291.0" layoutY="567.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button layoutX="207.0" layoutY="567.0" mnemonicParsing="false" text="Añadir" />
-                  <Button layoutX="398.0" layoutY="567.0" mnemonicParsing="false" text="Eliminar" />
-                  <ComboBox layoutX="777.0" layoutY="337.0" prefWidth="150.0" promptText="CLIENTE" />
-                  <Separator layoutX="37.0" layoutY="247.0" prefHeight="42.0" prefWidth="988.0" />
-                  <ComboBox layoutX="777.0" layoutY="399.0" prefWidth="150.0" promptText="ARTICULO" />
-                  <DatePicker layoutX="777.0" layoutY="465.0" prefHeight="28.0" prefWidth="158.0" promptText="Fecha de pedido" />
-                  <GridPane layoutX="627.0" layoutY="33.0" prefHeight="209.0" prefWidth="218.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                  </GridPane>
+                  <Button layoutX="883.0" layoutY="219.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="138.0" text="Añadir producto" />
+                  <Button layoutX="574.0" layoutY="597.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="95.0" text="Eliminar" />
+                  <ComboBox layoutX="37.0" layoutY="139.0" prefWidth="150.0" promptText="CLIENTE" />
+                  <Separator layoutX="37.0" layoutY="103.0" prefHeight="42.0" prefWidth="988.0" />
+                  <ComboBox layoutX="37.0" layoutY="219.0" prefWidth="150.0" promptText="PRODUCTO" />
+                  <DatePicker layoutX="252.0" layoutY="145.0" prefHeight="31.0" prefWidth="164.0" promptText="Fecha de pedido" />
+                  <DatePicker layoutX="470.0" layoutY="145.0" prefHeight="31.0" prefWidth="164.0" promptText="Fecha de envío" />
+                  <DatePicker layoutX="687.0" layoutY="145.0" prefHeight="31.0" prefWidth="164.0" promptText="Fecha de llegada" />
+                  <Text layoutX="37.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Búsqueda pedido" />
+                  <TextField layoutX="37.0" layoutY="61.0" prefHeight="30.0" prefWidth="164.0" promptText="Nº Pedido" />
+                  <TextField layoutX="252.0" layoutY="219.0" prefHeight="30.0" prefWidth="164.0" promptText="Cantidad" />
+                  <TextField layoutX="470.0" layoutY="219.0" prefHeight="30.0" prefWidth="164.0" promptText="PVP" />
+                  <Button layoutX="238.0" layoutY="61.0" mnemonicParsing="false" text="Buscar" />
+                  <Separator layoutX="37.0" layoutY="177.0" prefHeight="42.0" prefWidth="988.0" />
+                  <Button layoutX="885.0" layoutY="144.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="134.0" text="Crear pedido" />
+                  <Button layoutX="385.0" layoutY="597.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="95.0" text="Actualizar" />
                </children>
             </AnchorPane>
          </content>
