--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -79,31 +79,11 @@
                   <Button fx:id="updateProductBtn" layoutX="278.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionUpdateProductBtn" text="Actualizar" />
                   <Button fx:id="addNewProductBtn" layoutX="407.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionAddNewProductBtn" text="Añadir" />
                   <Button fx:id="deleteProductBtn" layoutX="510.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionDeleteProductBtn" text="Eliminar" />
-                  <TextArea fx:id="productCodeField" layoutX="31.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Codigo Producto">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea fx:id="productNameField" layoutX="189.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Producto">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea fx:id="productDescriptionField" layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripcion">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea fx:id="quantityInStockField" layoutX="518.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Stock">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea fx:id="buyPriceField" layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Precio compra">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
+                  <TextField fx:id="productCodeField" layoutX="31.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Codigo Producto" />
+                  <TextField fx:id="productNameField" layoutX="190.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Producto" />
+                  <TextField layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripción" />
+                  <TextField fx:id="quantityInStockField" layoutX="524.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Stock" />
+                  <TextField fx:id="buyPriceField" layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Precio compra" />
                </children>
             </AnchorPane>
          </content>
