--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -15,51 +15,27 @@
   <tabs>
     <Tab text="Clientes">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
+        <AnchorPane fx:id="tv_birthDate" minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
+                  <TableView fx:id="tv_customer" layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
                     <columns>
-                      <TableColumn prefWidth="111.0" text="Nombre" />
-                        <TableColumn prefWidth="154.0" text="DNI" />
-                        <TableColumn minWidth="7.0" prefWidth="199.0" text="Limite de Credito" />
-                        <TableColumn minWidth="0.0" prefWidth="134.0" text="Telefono" />
-                      <TableColumn prefWidth="173.0" text="Email" />
-                        <TableColumn prefWidth="214.0" text="Fecha de nacimiento" />
+                      <TableColumn fx:id="col_customerName" prefWidth="111.0" text="Nombre" />
+                        <TableColumn fx:id="col_idCard" prefWidth="154.0" text="DNI" />
+                        <TableColumn fx:id="col_creditLimit" minWidth="7.0" prefWidth="199.0" text="Limite de Credito" />
+                        <TableColumn fx:id="col_phoneNumber" minWidth="0.0" prefWidth="134.0" text="Telefono" />
+                      <TableColumn fx:id="col_customerEmail" prefWidth="173.0" text="Email" />
+                        <TableColumn fx:id="col_birthDate" prefWidth="214.0" text="Fecha de nacimiento" />
                     </columns>
                   </TableView>
-                  <Button layoutX="446.0" layoutY="602.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button layoutX="365.0" layoutY="602.0" mnemonicParsing="false" text="Añadir" />
-                  <Button layoutX="549.0" layoutY="602.0" mnemonicParsing="false" text="Eliminar" />
-                  <TextArea layoutX="31.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="Nombre">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="189.0" layoutY="531.0" prefHeight="40.0" prefWidth="150.0" promptText="DNI">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Limite de Credito">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="518.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Telefono">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Email">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
-                  <TextArea layoutX="850.0" layoutY="532.0" prefHeight="40.0" prefWidth="158.0" promptText="Fecha de nacimiento">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextArea>
+                  <Button fx:id="bt_actualizar" layoutX="446.0" layoutY="602.0" mnemonicParsing="false" onAction="#onClick_bt_actualizar" text="Actualizar" />
+                  <Button fx:id="bt_aniadir" layoutX="365.0" layoutY="602.0" mnemonicParsing="false" onAction="#onClick_bt_aniadir" text="Añadir" />
+                  <Button fx:id="bt_eliminar" layoutX="549.0" layoutY="602.0" mnemonicParsing="false" onAction="#onClick_bt_eliminar" text="Eliminar" />
+                  <TextField fx:id="tf_customerName" layoutX="31.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
+                  <TextField fx:id="tf_idCard" layoutX="190.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
+                  <TextField fx:id="tf_creditLimit" layoutX="355.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
+                  <TextField fx:id="tf_phoneNumber" layoutX="524.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
+                  <TextField fx:id="tf_customerEmail" layoutX="686.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
+                  <TextField fx:id="tf_brithDate" layoutX="850.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
                </children></AnchorPane>
       </content>
     </Tab>
