--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -17,7 +17,7 @@
       <content>
         <AnchorPane fx:id="tv_birthDate" minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView fx:id="tv_customer" layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
+                  <TableView fx:id="tv_customer" layoutX="31.0" layoutY="37.0" onMouseClicked="#handleOnMouseClicked" prefHeight="459.0" prefWidth="986.0">
                     <columns>
                       <TableColumn fx:id="col_customerName" prefWidth="111.0" text="Nombre" />
                         <TableColumn fx:id="col_idCard" prefWidth="154.0" text="DNI" />
